[tool.poetry]
name = "comsrv"
version = "2.2.0"
description = ""
authors = ["Raphael Bernhard <beraphae@gmail.com>"]
packages = [{ include = "comsrv", from = "python" }]

[tool.poetry.dependencies]
python = ">=3.8, <4.0"
broadcast_wsrpc = { git = "https://github.com/raffber/wsrpc.git", rev = "06feeb0091e37cd671dfe3dfe0328515e0db8894", subdirectory = "python" }
aiohttp = "^3.7"
numpy = "^1.22"

[tool.poetry.dev-dependencies]
black = "23.3"
ruff = "^0.1.7"
mypy = "^1.2.0"
poetry = "^1.7.1"
pytest = "^7.4.3"
pytest-asyncio = "^0.23.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyprojectx]
poetry = "poetry==1.7.1"

[tool.pyprojectx.aliases]
install = "poetry install"
run = "poetry run"
outdated = "poetry show --outdated"
test = "poetry run pytest"

[tool.pytest.ini_options]
testpaths = ["python/comsrv"]
python_files = "/*/test_*.py"
