[tool.poetry]
name = "comsrv"
version = "2.5.2"
description = ""
authors = ["Raphael Bernhard <beraphae@gmail.com>"]
packages = [{ include = "comsrv", from = "python" }]

[tool.poetry.dependencies]
python = ">=3.10, <4.0"
broadcast_wsrpc = { git = "https://github.com/raffber/wsrpc.git", branch = "main" }
aiohttp = ">=3.9"
numpy = ">=1.26"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
ruff = "^0.8"
poetry = "^1.8.2"
pytest = "^7.4.3"
pytest-asyncio = "^0.23.6"
pyright = { version = "*", extras = ["nodejs"] }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyprojectx]
poetry = "poetry==1.8.2"

[tool.pyprojectx.aliases]
install = "poetry install"
run = "poetry run"
outdated = "poetry show --outdated"
test = "poetry run pytest"
types = "poetry run pyright python/comsrv"
build = "poetry build --format wheel"
check = "poetry run ruff check python/comsrv"

[tool.pytest.ini_options]
testpaths = ["python/comsrv"]
python_files = "/*/test_*.py"

[tool.pyright]
include = ["python/comsrv"]
typeCheckingMode = "strict"
