[package]
name = "comsrv_client"
version = "2.3.1"
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
broadcast_wsrpc = { git = "https://github.com/raffber/wsrpc.git", rev = "9565f8f03502e93c21e5159fba48e2779a429b2d" }
comsrv_protocol = { path = "../protocol" }
async-trait = "0.1.51"
thiserror = "1"
tokio = { version = "1", features = ["sync", "rt"] }
url = "2"
uuid = "0.8"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1"
anyhow = { version = "1", features = ["backtrace"] }
