[package]
name = "comsrv_client"
version = "2.5.4"
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
broadcast_wsrpc = { git = "https://github.com/raffber/wsrpc.git", rev = "6c5fc98d0a51f2517e26d82dc8d9bb2343c02255" }
comsrv_protocol = { path = "../protocol" }
async-trait = "^0.1"
thiserror = "1"
tokio = { version = "1", features = ["sync", "rt"] }
url = "2"
uuid = "0.8"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1"
anyhow = { version = "1", features = ["backtrace"] }
