[package]
name = "comsrv"
version = "2.0.0"
authors = ["Raphael Bernhard <beraphae@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "0.1.10"
tempfile = "3.1.0"
dlopen = "0.1.8"
dlopen_derive = "0.1.4"
lazy_static = "1.4.0"
thiserror = "1.0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "^1", features = ["sync", "time", "rt", "macros", "rt-multi-thread"] }
wsrpc = { git = "https://github.com/raffber/wsrpc.git", tag = "release/v1.0.0" }
clap = "2.33.3"
env_logger = "0.7.1"
log = "0.4.11"
url = "2.1.1"
uuid = "0.8.2"
tokio-modbus = "0.5.0"
tokio-serial = {version = "5.4.3", features = ["libudev"]}
async-trait = "0.1.40"
futures = "0.3.7"
async-vxi11 = { git = "https://github.com/raffber/async-vxi11.git", rev = "0371e960f0a3018db83fabf4d773f585959e6e06" }
async-can = { git = "https://github.com/raffber/async-can.git", rev = "b67b533055015bcdbed745d6caafbb6e792c2d97" }
async-ftdi = {git = "https://github.com/raffber/async-ftdi.git", rev = "1bfeae5fa75ab1573d4c3133df4c2452e9e4fe39"}
rand = "0.8"
byteorder = "1.3"
bitvec = "0.20.1"
hidapi = {version = "1.2.6", default-features = false, features = ["linux-static-hidraw"] }
comsrv_protocol = { path = "../protocol" }
anyhow = "1"

[dependencies.libftd2xx]
version = "0.32"
features = ["static"]

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
debug = 0

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[patch.crates-io]
libftd2xx-ffi = {git = "https://github.com/raffber/libftd2xx-ffi.git", rev="b14b48ce338b178f2bc25297e60f0eff5e23526c"}