[package]
name = "comsrv"
version = "2.0.0"
authors = ["Raphael Bernhard <beraphae@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "0.1.10"
tempfile = "3.1.0"
dlopen = "0.1.8"
dlopen_derive = "0.1.4"
lazy_static = "1.4.0"
thiserror = "1.0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "^1", features = ["sync", "time", "rt", "macros", "rt-multi-thread"] }
broadcast_wsrpc = { git = "https://github.com/raffber/wsrpc.git", rev = "9565f8f03502e93c21e5159fba48e2779a429b2d" }
clap = {version = "3", features = ["cargo"]}
env_logger = "0.7.1"
log = "0.4.11"
url = "2.1.1"
uuid = "0.8.2"
tokio-modbus = "0.5.0"
tokio-serial = {version = "5.4.3", features = ["libudev"]}
async-trait = "0.1.40"
futures = "0.3.7"
async-vxi11 = { git = "https://github.com/raffber/async-vxi11.git", rev = "0371e960f0a3018db83fabf4d773f585959e6e06" }
async-can = { git = "https://github.com/raffber/async-can.git", rev = "6975dcbac0db911cff1ede0d4970c08b4ab88481" }
async-ftdi = {git = "https://github.com/raffber/async-ftdi.git", rev = "1bfeae5fa75ab1573d4c3133df4c2452e9e4fe39"}
rand = "0.8"
byteorder = "1.3"
bitvec = "0.20.1"
hidapi = {version = "1.2.6", default-features = false, features = ["linux-static-hidraw"] }
comsrv_protocol = { path = "../protocol" }
anyhow = {version = "1", features = ["backtrace"]}

[dependencies.libftd2xx]
version = "0.32"
features = ["static"]

[target.'cfg(unix)'.dependencies]
libc = "0.2"
