[package]
name = "comsrv"
version = "2.3.1"
authors = ["Raphael Bernhard <beraphae@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "comsrv"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "0.1.10"
tempfile = "3.1.0"
dlopen = "0.1.8"
dlopen_derive = "0.1.4"
lazy_static = "1.4.0"
thiserror = "^1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "^1", features = [
    "sync",
    "time",
    "rt",
    "macros",
    "rt-multi-thread",
] }
broadcast_wsrpc = { git = "https://github.com/raffber/wsrpc.git", rev = "6c5fc98d0a51f2517e26d82dc8d9bb2343c02255" }
clap = { version = "3", features = ["cargo"] }
env_logger = "0.7.1"
log = "^0.4"
url = "^2.1.1"
uuid = "^0.8"
tokio-serial = { version = "5.4.3", features = ["libudev"] }
async-trait = "^0.1"
futures = "^0.3"
async-vxi11 = { git = "https://github.com/raffber/async-vxi11.git", rev = "0371e960f0a3018db83fabf4d773f585959e6e06" }
async-can = { git = "https://github.com/raffber/async-can.git", rev = "aa008afbc3fea9517c205272301f373761244d23" }
async-ftdi = { git = "https://github.com/raffber/async-ftdi.git", rev = "5fdf23b8f35c23dd58331bc1f61b653992a0a676" }
rand = "0.8"
byteorder = "^1.3"
bitvec = "^0.20"
hidapi = { version = "^1", default-features = false, features = [
    "linux-static-hidraw",
] }
comsrv_protocol = { path = "../protocol" }
anyhow = { version = "1", features = ["backtrace"] }

[dependencies.libftd2xx]
version = "0.32"
features = ["static"]

[target.'cfg(unix)'.dependencies]
libc = "0.2"
