[package]
name = "comsrv_client"
version = "0.1.0"
edition = "2018"

[dependencies]
wsrpc = { path = "../wsrpc" }
comsrv_protocol = { path = "../comsrv_protocol" }
async-trait = "0.1.51"
thiserror = "1"
tokio = { version = "1", features = ["sync", "rt"] }
url = "2"
uuid = "0.8"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1"
