[package]
name = "comsrv_protocol"
version = "1.3.0"
authors = ["Raphael Bernhard <beraphae@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
base64 = "0.13"
uuid = { version = "0.8", features = ["serde", "v4"] }
byteorder = "1"
thiserror = "1"
anyhow = {version = "1", features = ["backtrace"]}
