[package]
name = "benchmark"
version = "0.1.0"
authors = ["Raphael Bernhard <beraphae@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
comsrv = {path = ".."}
wsrpc = {path = "../../wsrpc"}
tokio = {version = "0.2.22", features = ["sync", "time", "rt-core", "blocking", "macros"]}
futures = "0.3"
uuid = "0.8"
url = "2"
